--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -2510,55 +2510,55 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_48fb7_row0_col1, #T_48fb7_row1_col1 {\n",
+       "#T_5a9e1_row0_col1, #T_5a9e1_row1_col1 {\n",
        "  background-color: pink;\n",
        "}\n",
-       "#T_48fb7_row0_col2, #T_48fb7_row1_col2 {\n",
+       "#T_5a9e1_row0_col2, #T_5a9e1_row1_col2 {\n",
        "  background-color: skyblue;\n",
        "}\n",
-       "#T_48fb7_row0_col3, #T_48fb7_row1_col3 {\n",
+       "#T_5a9e1_row0_col3, #T_5a9e1_row1_col3 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
-       "#T_48fb7_level0_col1 {\n",
+       "#T_5a9e1_level0_col1 {\n",
        "  background-color: pink;\n",
        "}\n",
-       "#T_48fb7_level0_col2 {\n",
+       "#T_5a9e1_level0_col2 {\n",
        "  background-color: skyblue;\n",
        "}\n",
-       "#T_48fb7_level0_col3 {\n",
+       "#T_5a9e1_level0_col3 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_48fb7\">\n",
+       "<table id=\"T_5a9e1\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_48fb7_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
-       "      <th id=\"T_48fb7_level0_col1\" class=\"col_heading level0 col1\" >2021</th>\n",
-       "      <th id=\"T_48fb7_level0_col2\" class=\"col_heading level0 col2\" >2020</th>\n",
-       "      <th id=\"T_48fb7_level0_col3\" class=\"col_heading level0 col3\" >2019</th>\n",
+       "      <th id=\"T_5a9e1_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
+       "      <th id=\"T_5a9e1_level0_col1\" class=\"col_heading level0 col1\" >2021</th>\n",
+       "      <th id=\"T_5a9e1_level0_col2\" class=\"col_heading level0 col2\" >2020</th>\n",
+       "      <th id=\"T_5a9e1_level0_col3\" class=\"col_heading level0 col3\" >2019</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_48fb7_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_48fb7_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
-       "      <td id=\"T_48fb7_row0_col1\" class=\"data row0 col1\" >1716561.000000</td>\n",
-       "      <td id=\"T_48fb7_row0_col2\" class=\"data row0 col2\" >250467</td>\n",
-       "      <td id=\"T_48fb7_row0_col3\" class=\"data row0 col3\" >2664549</td>\n",
+       "      <th id=\"T_5a9e1_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_5a9e1_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
+       "      <td id=\"T_5a9e1_row0_col1\" class=\"data row0 col1\" >1716561.000000</td>\n",
+       "      <td id=\"T_5a9e1_row0_col2\" class=\"data row0 col2\" >250467</td>\n",
+       "      <td id=\"T_5a9e1_row0_col3\" class=\"data row0 col3\" >2664549</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_48fb7_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_48fb7_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
-       "      <td id=\"T_48fb7_row1_col1\" class=\"data row1 col1\" >1743515.000000</td>\n",
-       "      <td id=\"T_48fb7_row1_col2\" class=\"data row1 col2\" >234928</td>\n",
-       "      <td id=\"T_48fb7_row1_col3\" class=\"data row1 col3\" >2611324</td>\n",
+       "      <th id=\"T_5a9e1_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_5a9e1_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
+       "      <td id=\"T_5a9e1_row1_col1\" class=\"data row1 col1\" >1743515.000000</td>\n",
+       "      <td id=\"T_5a9e1_row1_col2\" class=\"data row1 col2\" >234928</td>\n",
+       "      <td id=\"T_5a9e1_row1_col3\" class=\"data row1 col3\" >2611324</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x13b5d3d40>"
+       "<pandas.io.formats.style.Styler at 0x11e424bc0>"
       ]
      },
      "execution_count": 22,
@@ -2603,67 +2603,67 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_617ca_row0_col1, #T_617ca_row0_col2, #T_617ca_row1_col1, #T_617ca_row1_col2 {\n",
+       "#T_6ec8a_row0_col1, #T_6ec8a_row0_col2, #T_6ec8a_row1_col1, #T_6ec8a_row1_col2 {\n",
        "  background-color: pink;\n",
        "}\n",
-       "#T_617ca_row2_col1, #T_617ca_row2_col2, #T_617ca_row3_col1, #T_617ca_row3_col2 {\n",
+       "#T_6ec8a_row2_col1, #T_6ec8a_row2_col2, #T_6ec8a_row3_col1, #T_6ec8a_row3_col2 {\n",
        "  background-color: skyblue;\n",
        "}\n",
-       "#T_617ca_row4_col1, #T_617ca_row4_col2, #T_617ca_row5_col1, #T_617ca_row5_col2 {\n",
+       "#T_6ec8a_row4_col1, #T_6ec8a_row4_col2, #T_6ec8a_row5_col1, #T_6ec8a_row5_col2 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_617ca\">\n",
+       "<table id=\"T_6ec8a\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_617ca_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
-       "      <th id=\"T_617ca_level0_col1\" class=\"col_heading level0 col1\" >year</th>\n",
-       "      <th id=\"T_617ca_level0_col2\" class=\"col_heading level0 col2\" >travelers</th>\n",
+       "      <th id=\"T_6ec8a_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
+       "      <th id=\"T_6ec8a_level0_col1\" class=\"col_heading level0 col1\" >year</th>\n",
+       "      <th id=\"T_6ec8a_level0_col2\" class=\"col_heading level0 col2\" >travelers</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_617ca_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_617ca_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
-       "      <td id=\"T_617ca_row0_col1\" class=\"data row0 col1\" >2021</td>\n",
-       "      <td id=\"T_617ca_row0_col2\" class=\"data row0 col2\" >1716561.000000</td>\n",
+       "      <th id=\"T_6ec8a_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_6ec8a_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
+       "      <td id=\"T_6ec8a_row0_col1\" class=\"data row0 col1\" >2021</td>\n",
+       "      <td id=\"T_6ec8a_row0_col2\" class=\"data row0 col2\" >1716561.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_617ca_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_617ca_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
-       "      <td id=\"T_617ca_row1_col1\" class=\"data row1 col1\" >2021</td>\n",
-       "      <td id=\"T_617ca_row1_col2\" class=\"data row1 col2\" >1743515.000000</td>\n",
+       "      <th id=\"T_6ec8a_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_6ec8a_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
+       "      <td id=\"T_6ec8a_row1_col1\" class=\"data row1 col1\" >2021</td>\n",
+       "      <td id=\"T_6ec8a_row1_col2\" class=\"data row1 col2\" >1743515.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_617ca_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_617ca_row2_col0\" class=\"data row2 col0\" >2020-05-14 00:00:00</td>\n",
-       "      <td id=\"T_617ca_row2_col1\" class=\"data row2 col1\" >2020</td>\n",
-       "      <td id=\"T_617ca_row2_col2\" class=\"data row2 col2\" >250467.000000</td>\n",
+       "      <th id=\"T_6ec8a_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_6ec8a_row2_col0\" class=\"data row2 col0\" >2020-05-14 00:00:00</td>\n",
+       "      <td id=\"T_6ec8a_row2_col1\" class=\"data row2 col1\" >2020</td>\n",
+       "      <td id=\"T_6ec8a_row2_col2\" class=\"data row2 col2\" >250467.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_617ca_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_617ca_row3_col0\" class=\"data row3 col0\" >2020-05-13 00:00:00</td>\n",
-       "      <td id=\"T_617ca_row3_col1\" class=\"data row3 col1\" >2020</td>\n",
-       "      <td id=\"T_617ca_row3_col2\" class=\"data row3 col2\" >234928.000000</td>\n",
+       "      <th id=\"T_6ec8a_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_6ec8a_row3_col0\" class=\"data row3 col0\" >2020-05-13 00:00:00</td>\n",
+       "      <td id=\"T_6ec8a_row3_col1\" class=\"data row3 col1\" >2020</td>\n",
+       "      <td id=\"T_6ec8a_row3_col2\" class=\"data row3 col2\" >234928.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_617ca_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_617ca_row4_col0\" class=\"data row4 col0\" >2019-05-14 00:00:00</td>\n",
-       "      <td id=\"T_617ca_row4_col1\" class=\"data row4 col1\" >2019</td>\n",
-       "      <td id=\"T_617ca_row4_col2\" class=\"data row4 col2\" >2664549.000000</td>\n",
+       "      <th id=\"T_6ec8a_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_6ec8a_row4_col0\" class=\"data row4 col0\" >2019-05-14 00:00:00</td>\n",
+       "      <td id=\"T_6ec8a_row4_col1\" class=\"data row4 col1\" >2019</td>\n",
+       "      <td id=\"T_6ec8a_row4_col2\" class=\"data row4 col2\" >2664549.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_617ca_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_617ca_row5_col0\" class=\"data row5 col0\" >2019-05-13 00:00:00</td>\n",
-       "      <td id=\"T_617ca_row5_col1\" class=\"data row5 col1\" >2019</td>\n",
-       "      <td id=\"T_617ca_row5_col2\" class=\"data row5 col2\" >2611324.000000</td>\n",
+       "      <th id=\"T_6ec8a_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_6ec8a_row5_col0\" class=\"data row5 col0\" >2019-05-13 00:00:00</td>\n",
+       "      <td id=\"T_6ec8a_row5_col1\" class=\"data row5 col1\" >2019</td>\n",
+       "      <td id=\"T_6ec8a_row5_col2\" class=\"data row5 col2\" >2611324.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x13d2e2150>"
+       "<pandas.io.formats.style.Styler at 0x15f15e150>"
       ]
      },
      "execution_count": 23,
@@ -4302,7 +4302,7 @@
     "    margins=True, margins_name='Total'\n",
     ")\n",
     "# reorder columns by order in the year\n",
-    "pivot_table.insert(5, \"New Year's\", pivot_table.pop(\"New Year's\").tolist())\n",
+    "pivot_table.insert(5, \"New Year's\", pivot_table.pop(\"New Year's\"))\n",
     "pivot_table"
    ]
   },
